@@ -1,4 +1,4 @@
 Acknowledgements: libfdatetime
 
-Copyright (c) 2009-2010, Joachim Metz <jbmetz@users.sourceforge.net>
+Copyright (c) 2009-2011, Joachim Metz <jbmetz@users.sourceforge.net>
 
